@@ -11,8 +11,8 @@
 
 
 // Current code version is subject to change with each new release.
-define ('CODE_VERSION', '0.17.1');
-define ('MAX_DICT_KEY', 988);
+define ('CODE_VERSION', '0.17.2');
+define ('MAX_DICT_KEY', 1054);
 
 define ('TAGNAME_REGEXP', '^[[:alnum:]]([\. _~-]?[[:alnum:]])*$');
 define ('AUTOTAGNAME_REGEXP', '^\$[[:alnum:]]([\. _~-]?[[:alnum:]])*$');
